--- a/src/REstate.Susanoo/REstate.Susanoo.csproj
+++ b/src/REstate.Susanoo/REstate.Susanoo.csproj
@@ -31,8 +31,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Susanoo.Core, Version=1.2.3.12, Culture=neutral, PublicKeyToken=0a505ce04f8a59d5, processorArchitecture=MSIL">
-      <HintPath>..\packages\Susanoo.Core.1.2.3.12\lib\net45\Susanoo.Core.dll</HintPath>
+    <Reference Include="Susanoo.Core, Version=1.2.4.2, Culture=neutral, PublicKeyToken=0a505ce04f8a59d5, processorArchitecture=MSIL">
+      <HintPath>..\packages\Susanoo.Core.1.2.4.2\lib\net45\Susanoo.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Susanoo.SqlServer, Version=1.2.4.2, Culture=neutral, PublicKeyToken=fd869d2c03fd7e96, processorArchitecture=MSIL">
+      <HintPath>..\packages\Susanoo.SqlServer.1.2.4.2\lib\net45\Susanoo.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
