--- a/src/REstate.Web/REstate.Web.csproj
+++ b/src/REstate.Web/REstate.Web.csproj
@@ -63,6 +63,7 @@
     <Compile Include="UserIdentityExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
