--- a/src/REstate.Chrono/REstate.Chrono.csproj
+++ b/src/REstate.Chrono/REstate.Chrono.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{95D7FB41-1D52-467A-873E-C2C31926B209}</ProjectGuid>
+    <ProjectGuid>{6EE10DC1-EAA1-4754-B207-D4C4B86EAB9F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>REstate.Susanoo</RootNamespace>
-    <AssemblyName>REstate.Susanoo</AssemblyName>
+    <RootNamespace>REstate.Chrono</RootNamespace>
+    <AssemblyName>REstate.Chrono</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,36 +30,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Susanoo.Core, Version=1.2.4.2, Culture=neutral, PublicKeyToken=0a505ce04f8a59d5, processorArchitecture=MSIL">
-      <HintPath>..\packages\Susanoo.Core.1.2.4.2\lib\net45\Susanoo.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Susanoo.SqlServer, Version=1.2.4.2, Culture=neutral, PublicKeyToken=fd869d2c03fd7e96, processorArchitecture=MSIL">
-      <HintPath>..\packages\Susanoo.SqlServer.1.2.4.2\lib\net45\Susanoo.SqlServer.dll</HintPath>
+    <Reference Include="FluentScheduler, Version=3.1.46.0, Culture=neutral, PublicKeyToken=b76503528a14ebd1, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentScheduler.3.1.46\lib\net40\FluentScheduler.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Transactions" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CodeConfigurationRepository.cs" />
-    <Compile Include="InstanceContextualRepository.cs" />
-    <Compile Include="InstanceRepository.cs" />
-    <Compile Include="InstanceRepositoryContextFactory.cs" />
-    <Compile Include="MachineConfigurationRepository.cs" />
-    <Compile Include="SusanooScriptHost.cs" />
-    <Compile Include="MachineInstancesRepository.cs" />
-    <Compile Include="ConfigurationContextualRepository.cs" />
-    <Compile Include="ContextDbConnectionMode.cs" />
-    <Compile Include="DatabaseManagerPool.cs" />
-    <Compile Include="IDatabaseManagerPool.cs" />
-    <Compile Include="ConfigurationRepository.cs" />
-    <Compile Include="ConfigurationRepositoryContextFactory.cs" />
+    <Compile Include="ChronoEngine.cs" />
+    <Compile Include="ChronoTriggerScriptHost.cs" />
+    <Compile Include="ChronoTriggerScriptHostFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SusanooScriptHostFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
