--- a/src/REstate/REstate.csproj
+++ b/src/REstate/REstate.csproj
@@ -69,14 +69,18 @@
     <Compile Include="IStateMachine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ICodeConfigurationRepository.cs" />
-    <Compile Include="Repositories\IConfigurationRepository.cs" />
+    <Compile Include="Repositories\IInstanceRepository.cs" />
+    <Compile Include="Repositories\IInstanceRepositoryContextFactory.cs" />
+    <Compile Include="Repositories\IMachineConfigurationRepository.cs" />
     <Compile Include="Repositories\IMachineInstancesRepository.cs" />
     <Compile Include="Repositories\IContextualRepository.cs" />
-    <Compile Include="Repositories\IRepository.cs" />
+    <Compile Include="Repositories\IConfigurationRepository.cs" />
     <Compile Include="Repositories\IMachineFunctionsRepository.cs" />
     <Compile Include="Repositories\IRepositoryContextFactory.cs" />
+    <Compile Include="Services\DefaultScriptHostFactoryResolver.cs" />
     <Compile Include="Services\IScriptHost.cs" />
     <Compile Include="Services\IScriptHostFactory.cs" />
+    <Compile Include="Services\IScriptHostResolver.cs" />
     <Compile Include="Services\IStateMachineFactory.cs" />
     <Compile Include="State.cs" />
     <Compile Include="Trigger.cs" />
