--- a/src/REstate.Chrono/REstate.Chrono.csproj
+++ b/src/REstate.Chrono/REstate.Chrono.csproj
@@ -30,10 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FluentScheduler, Version=3.1.46.0, Culture=neutral, PublicKeyToken=b76503528a14ebd1, processorArchitecture=MSIL">
-      <HintPath>..\packages\FluentScheduler.3.1.46\lib\net40\FluentScheduler.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,9 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ChronoEngine.cs" />
+    <Compile Include="ChronoTrigger.cs" />
+    <Compile Include="IChronoEngine.cs" />
     <Compile Include="ChronoTriggerScriptHost.cs" />
     <Compile Include="ChronoTriggerScriptHostFactory.cs" />
+    <Compile Include="IChronoEngineFactory.cs" />
+    <Compile Include="IChronoTrigger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
