--- a/src/REstate.Web/packages.config
+++ b/src/REstate.Web/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Nancy" version="1.4.2" targetFramework="net452" />
   <package id="Nancy.Authentication.Stateless" version="1.4.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net461" />
 </packages>
