--- a/src/Susanoo.ConnectionPooling/Susanoo.ConnectionPooling.csproj
+++ b/src/Susanoo.ConnectionPooling/Susanoo.ConnectionPooling.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{95D7FB41-1D52-467A-873E-C2C31926B209}</ProjectGuid>
+    <ProjectGuid>{4F2BFBB1-9B5B-4626-84A0-195A863A7C21}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>REstate.Susanoo</RootNamespace>
-    <AssemblyName>REstate.Susanoo</AssemblyName>
+    <RootNamespace>Susanoo.ConnectionPooling</RootNamespace>
+    <AssemblyName>Susanoo.ConnectionPooling</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -35,42 +34,24 @@
       <HintPath>..\packages\Susanoo.Core.1.2.4.2\lib\net45\Susanoo.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Susanoo.SqlServer, Version=1.2.4.2, Culture=neutral, PublicKeyToken=fd869d2c03fd7e96, processorArchitecture=MSIL">
-      <HintPath>..\packages\Susanoo.SqlServer.1.2.4.2\lib\net45\Susanoo.SqlServer.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Transactions" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CodeConfigurationRepository.cs" />
-    <Compile Include="InstanceContextualRepository.cs" />
-    <Compile Include="InstanceRepository.cs" />
-    <Compile Include="InstanceRepositoryContextFactory.cs" />
-    <Compile Include="MachineConfigurationRepository.cs" />
-    <Compile Include="SusanooScriptHost.cs" />
-    <Compile Include="MachineInstancesRepository.cs" />
-    <Compile Include="ConfigurationContextualRepository.cs" />
-    <Compile Include="ConfigurationRepository.cs" />
-    <Compile Include="ConfigurationRepositoryContextFactory.cs" />
+    <Compile Include="ContextDbConnectionMode.cs" />
+    <Compile Include="DatabaseManagerPool.cs" />
+    <Compile Include="IDatabaseManagerPool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SusanooScriptHostFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\REstate\REstate.csproj">
-      <Project>{9c873c5d-015b-436c-8473-fa93da90757d}</Project>
-      <Name>REstate</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Susanoo.ConnectionPooling\Susanoo.ConnectionPooling.csproj">
-      <Project>{4f2bfbb1-9b5b-4626-84a0-195a863a7c21}</Project>
-      <Name>Susanoo.ConnectionPooling</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
