--- a/src/REstate.Web.Common/REstate.Web.Common.csproj
+++ b/src/REstate.Web.Common/REstate.Web.Common.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Modules\SecuredModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="REstateBootstrapper.cs" />
+    <Compile Include="REstateConfiguration.cs" />
     <Compile Include="RoutePrefix.cs" />
     <Compile Include="User.cs" />
     <Compile Include="UserIdentityExtensions.cs" />
