Configuring services as TopShelf services

--- a/src/REstate.Service.AdminUI/App.config
+++ b/src/REstate.Service.AdminUI/App.config
@@ -5,13 +5,15 @@
     <add name="REstate" connectionString="server=(LocalDB)\MSSQLLocalDb;database=REstate;Application Name=REstate;Integrated Security=sspi;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="REstate.Services.HostBindingAddress" value="http://+/restate/machines" />
+    <add key="REstate.Services.HostBindingAddress" value="http://+/restate" />
     <add key="REstate.Web.EncryptionPassphrase" value="ThisIsMySharedKeyAndPassPhrase" />
     <add key="REstate.Web.HmacPassphrase" value="ThisIsMySharedKeyAndPassPhrase" />
     <add key="REstate.Web.LoginAddress" value="http://localhost/restate/auth/login" />
     <add key="REstate.Web.ApiKeyAddress" value="http://localhost/restate/auth/apikey" />
     <add key="REstate.Web.ClaimsPrincipalResourceName" value="server.User" />
-    <add key="REstate.Web.ChronoAddress" value="http://localhost/restate/chrono/" />
+    <add key="REstate.Web.ChronoAddress" value="http://localhost/restate/chrono" />
+    <add key="REstate.Web.InstancesAddress" value="http://localhost/restate/machines" />
+    <add key="REstate.Web.ConfigurationAddress" value="http://localhost/restate/configuration" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
@@ -58,14 +60,6 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Reflection.Metadata" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.2.0.0" newVersion="1.2.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Topshelf" publicKeyToken="b800c4cfcdeea87b" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.3.154.0" newVersion="3.3.154.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Serilog" publicKeyToken="24c2f752a8e58a10" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.5.0.0" newVersion="1.5.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
