--- a/src/REstate.Services.Configuration/App.config
+++ b/src/REstate.Services.Configuration/App.config
@@ -5,7 +5,7 @@
     <add name="REstate" connectionString="server=(LocalDB)\MSSQLLocalDb;database=REstate;Application Name=REstate;Integrated Security=sspi;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="REstate.Services.HostBindingAddress" value="http://+/restate" />
+    <add key="REstate.Services.HostBindingAddress" value="http://+/restate/configuration" />
     <add key="REstate.Web.EncryptionPassphrase" value="ThisIsMySharedKeyAndPassPhrase" />
     <add key="REstate.Web.HmacPassphrase" value="ThisIsMySharedKeyAndPassPhrase" />
     <add key="REstate.Web.LoginAddress" value="http://localhost/restate/auth/login" />
