--- a/src/REstate.Services.Configuration/packages.config
+++ b/src/REstate.Services.Configuration/packages.config
@@ -10,4 +10,6 @@
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Serilog" version="1.5.14" targetFramework="net461" />
   <package id="Serilog.Sinks.Literate" version="1.2.0" targetFramework="net461" />
+  <package id="Topshelf" version="3.3.1" targetFramework="net461" />
+  <package id="Topshelf.Serilog" version="3.3.1" targetFramework="net461" />
 </packages>
