--- a/src/REstate.Web.Instances/packages.config
+++ b/src/REstate.Web.Instances/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Nancy" version="1.4.3" targetFramework="net461" />
+  <package id="Serilog" version="1.5.14" targetFramework="net461" />
+  <package id="Topshelf" version="3.3.1" targetFramework="net461" />
 </packages>
