Fleshing out services.
Converting the Connectors into AutoFac plugin modules.
Adding module for Logging with Serilog.
Adding a platform project for config classes.
Moving config from app.config to REstateConfig.json
Adding a database migration project and .bat

--- a/src/REstate.Connectors.Chrono/REstate.Connectors.Chrono.csproj
+++ b/src/REstate.Connectors.Chrono/REstate.Connectors.Chrono.csproj
@@ -36,6 +36,10 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=3.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.3.5.2\lib\net40\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,6 +48,7 @@
   <ItemGroup>
     <Compile Include="ChronoTriggerConnector.cs" />
     <Compile Include="ChronoTriggerConnectorFactory.cs" />
+    <Compile Include="ChronoTriggerConnectorModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -55,10 +60,17 @@
       <Project>{bc6e21a3-4200-4681-b74a-b30b6f46bace}</Project>
       <Name>REstate.Client</Name>
     </ProjectReference>
+    <ProjectReference Include="..\REstate.Platform\REstate.Platform.csproj">
+      <Project>{6905fc7a-53de-4454-a37b-5d53e4702785}</Project>
+      <Name>REstate.Platform</Name>
+    </ProjectReference>
     <ProjectReference Include="..\REstate\REstate.csproj">
       <Project>{9c873c5d-015b-436c-8473-fa93da90757d}</Project>
       <Name>REstate</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
