--- a/src/REstate.Services.ChronoConsumer/App.config
+++ b/src/REstate.Services.ChronoConsumer/App.config
@@ -5,9 +5,7 @@
     <add name="REstate" connectionString="server=(LocalDB)\MSSQLLocalDb;database=REstate;Application Name=REstate;Integrated Security=sspi;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="REstate.Services.HostBindingAddress" value="http://+/restate/chrono" />
-    <add key="REstate.Web.ApiKeyAddress" value="http://localhost/restate/auth/apikey" />
-    <add key="REstate.Web.Chrono.InstancesAddress" value="http://localhost/restate/machines/" />
+    <add key="ApiKey" value="98EC17D7-7F31-4A44-A911-6B4D10B3DC2E" />
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
