--- a/src/REstate.Services.Instances/REstate.Services.Instances.csproj
+++ b/src/REstate.Services.Instances/REstate.Services.Instances.csproj
@@ -62,6 +62,10 @@
       <HintPath>..\packages\Nancy.Bootstrappers.Autofac.1.4.1\lib\net40\Nancy.Bootstrappers.Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
       <Private>True</Private>
@@ -123,6 +127,10 @@
       <Project>{3b215cfc-1cf6-47d8-96f0-053adbf2d9ba}</Project>
       <Name>REstate.Connectors.Chrono</Name>
     </ProjectReference>
+    <ProjectReference Include="..\REstate.Connectors.RoslynScripting\REstate.Connectors.RoslynScripting.csproj">
+      <Project>{310a26d6-518b-41a6-b5db-0b4a1b4a84c9}</Project>
+      <Name>REstate.Connectors.RoslynScripting</Name>
+    </ProjectReference>
     <ProjectReference Include="..\REstate.Logging.Serilog\REstate.Logging.Serilog.csproj">
       <Project>{bc1b64fe-0b9b-4ffd-b490-fba8792c076c}</Project>
       <Name>REstate.Logging.Serilog</Name>
@@ -130,6 +138,10 @@
     <ProjectReference Include="..\REstate.Owin\REstate.Owin.csproj">
       <Project>{c011084b-65ef-43c6-af70-0d1fe8f16662}</Project>
       <Name>REstate.Owin</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\REstate.Platform\REstate.Platform.csproj">
+      <Project>{6905fc7a-53de-4454-a37b-5d53e4702785}</Project>
+      <Name>REstate.Platform</Name>
     </ProjectReference>
     <ProjectReference Include="..\REstate.Repositories.Configuration.Susanoo\REstate.Repositories.Configuration.Susanoo.csproj">
       <Project>{4d17b5d5-ee07-4d79-99cb-342dd2105472}</Project>
@@ -139,13 +151,9 @@
       <Project>{692dca0e-3b2c-4919-8c2d-1af9e665d521}</Project>
       <Name>REstate.Repositories.Instances.Susanoo</Name>
     </ProjectReference>
-    <ProjectReference Include="..\REstate.Connectors.RoslynScripting\REstate.Connectors.RoslynScripting.csproj">
-      <Project>{310a26d6-518b-41a6-b5db-0b4a1b4a84c9}</Project>
-      <Name>REstate.Connectors.RoslynScripting</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\REstate.Services.Common.Api\REstate.Services.Common.Api.csproj">
+    <ProjectReference Include="..\REstate.Services.Common.Api\REstate.ApiService.csproj">
       <Project>{eacdb7b6-f0d8-4663-8f93-6d4a44f381bb}</Project>
-      <Name>REstate.Services.Common.Api</Name>
+      <Name>REstate.ApiService</Name>
     </ProjectReference>
     <ProjectReference Include="..\REstate.Stateless\REstate.Stateless.csproj">
       <Project>{7ae96174-718f-45a2-8389-0a1e982dce82}</Project>
