--- a/src/REstate.Owin/REstate.Owin.csproj
+++ b/src/REstate.Owin/REstate.Owin.csproj
@@ -70,9 +70,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\REstate.Web.Common\REstate.Web.Common.csproj">
-      <Project>{75b55765-0ea6-4158-a0e2-c81e54742718}</Project>
-      <Name>REstate.Web.Common</Name>
+    <ProjectReference Include="..\REstate.Platform\REstate.Platform.csproj">
+      <Project>{6905fc7a-53de-4454-a37b-5d53e4702785}</Project>
+      <Name>REstate.Platform</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
