--- a/src/REstate.Service.AdminUI/packages.config
+++ b/src/REstate.Service.AdminUI/packages.config
@@ -7,6 +7,7 @@
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net461" />
   <package id="Nancy" version="1.4.3" targetFramework="net461" />
   <package id="Nancy.Bootstrappers.Autofac" version="1.4.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Serilog" version="1.5.14" targetFramework="net461" />
   <package id="Serilog.Sinks.Literate" version="1.2.0" targetFramework="net461" />
