--- a/src/REstate.Services.ChronoConsumer/packages.config
+++ b/src/REstate.Services.ChronoConsumer/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net461" />
   <package id="AutofacSerilogIntegration" version="1.0.10" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
   <package id="Serilog" version="1.5.14" targetFramework="net461" />
   <package id="Serilog.Sinks.Literate" version="1.2.0" targetFramework="net461" />
   <package id="Topshelf" version="3.3.1" targetFramework="net461" />
