--- a/src/REstate.Platform/REstate.Platform.csproj
+++ b/src/REstate.Platform/REstate.Platform.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConnectionConfiguration.cs" />
     <Compile Include="ConnectorRegistrationExtensions.cs" />
     <Compile Include="IREstateConnectorModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
