--- a/src/REstate.Repositories.Auth.Susanoo/REstate.Repositories.Auth.Susanoo.csproj
+++ b/src/REstate.Repositories.Auth.Susanoo/REstate.Repositories.Auth.Susanoo.csproj
@@ -53,13 +53,13 @@
       <Project>{276af764-e2ba-4434-b6d2-799bfc4f340c}</Project>
       <Name>REstate.Auth</Name>
     </ProjectReference>
+    <ProjectReference Include="..\REstate.Platform\REstate.Platform.csproj">
+      <Project>{6905fc7a-53de-4454-a37b-5d53e4702785}</Project>
+      <Name>REstate.Platform</Name>
+    </ProjectReference>
     <ProjectReference Include="..\REstate.Repositories.Configuration.Susanoo\REstate.Repositories.Configuration.Susanoo.csproj">
       <Project>{4d17b5d5-ee07-4d79-99cb-342dd2105472}</Project>
       <Name>REstate.Repositories.Configuration.Susanoo</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\REstate.Connectors.Susanoo\REstate.Connectors.Susanoo.csproj">
-      <Project>{95d7fb41-1d52-467a-873e-c2c31926b209}</Project>
-      <Name>REstate.Connectors.Susanoo</Name>
     </ProjectReference>
     <ProjectReference Include="..\REstate\REstate.csproj">
       <Project>{9c873c5d-015b-436c-8473-fa93da90757d}</Project>
