--- a/src/REstate.Database.SqlServer/REstate.Database.SqlServer.csproj
+++ b/src/REstate.Database.SqlServer/REstate.Database.SqlServer.csproj
@@ -48,6 +48,7 @@
     <Compile Include="CreateBaselineChronoTables.cs" />
     <Compile Include="CreateBaselineConfigurationTables.cs" />
     <Compile Include="CreateBaselineInstancesTables.cs" />
+    <Compile Include="CreateChronoConsumerServiceAccount.cs" />
     <Compile Include="CreateDefaultAdminUsers.cs" />
     <Compile Include="CreateLoadMachineConfiguration.cs" />
     <Compile Include="CreateTableTypesAndProcs.cs" />
