--- a/src/REstate.Repositories.Configuration.Susanoo/REstate.Repositories.Configuration.Susanoo.csproj
+++ b/src/REstate.Repositories.Configuration.Susanoo/REstate.Repositories.Configuration.Susanoo.csproj
@@ -57,6 +57,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\REstate.Platform\REstate.Platform.csproj">
+      <Project>{6905fc7a-53de-4454-a37b-5d53e4702785}</Project>
+      <Name>REstate.Platform</Name>
+    </ProjectReference>
     <ProjectReference Include="..\REstate\REstate.csproj">
       <Project>{9c873c5d-015b-436c-8473-fa93da90757d}</Project>
       <Name>REstate</Name>
