undoing bad internet advice

--- a/src/REstate.Client.Tester/packages.config
+++ b/src/REstate.Client.Tester/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<packages xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
+<packages>
   <package id="Consul" version="0.6.4.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
-  <package id="Psibr.Platform" version="2.0.1.0" targetFramework="net461" />
+  <package id="Psibr.Platform" version="2.0.1.0" targetFramework="net45" />
 </packages>
