--- a/src/REstate.Connectors.RoslynScripting.Globals/packages.config
+++ b/src/REstate.Connectors.RoslynScripting.Globals/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<packages xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
-  <package id="Psibr.Platform" version="2.0.1.0" targetFramework="net461" />
+<packages>
+  <package id="Psibr.Platform" version="2.0.1.0" targetFramework="net45" />
 </packages>
