--- a/src/REstate.Database.SqlServer/packages.config
+++ b/src/REstate.Database.SqlServer/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<packages xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
+<packages>
   <package id="FluentMigrator" version="1.6.1" targetFramework="net461" />
   <package id="FluentMigrator.Tools" version="1.6.1" targetFramework="net461" />
 </packages>
