--- a/src/REstate.Repositories.Core.Susanoo/packages.config
+++ b/src/REstate.Repositories.Core.Susanoo/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<packages xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
-  <package id="Psibr.Platform" version="2.0.1.0" targetFramework="net461" />
+<packages>
+  <package id="Psibr.Platform" version="2.0.1.0" targetFramework="net45" />
   <package id="Susanoo.Core" version="1.2.4.2" targetFramework="net461" />
   <package id="Susanoo.SqlServer" version="1.2.4.2" targetFramework="net461" />
 </packages>
