--- a/src/REstate.Connectors.RoslynScripting/packages.config
+++ b/src/REstate.Connectors.RoslynScripting/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<packages xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
+<packages>
   <package id="Autofac" version="3.5.2" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.2.1" targetFramework="net461" />
@@ -7,7 +7,7 @@
   <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="1.2.1" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Scripting" version="1.2.1" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Scripting.Common" version="1.2.1" targetFramework="net461" />
-  <package id="Psibr.Platform" version="2.0.1.0" targetFramework="net461" />
+  <package id="Psibr.Platform" version="2.0.1.0" targetFramework="net45" />
   <package id="System.AppContext" version="4.0.0" targetFramework="net461" />
   <package id="System.Collections" version="4.0.10" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net461" />
