--- a/src/REstate.Web.AdminUI/packages.config
+++ b/src/REstate.Web.AdminUI/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<packages xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
+<packages>
   <package id="Autofac" version="3.5.2" targetFramework="net461" />
   <package id="Nancy" version="1.4.3" targetFramework="net461" />
   <package id="Nancy.Bootstrappers.Autofac" version="1.4.1" targetFramework="net461" />
-  <package id="Psibr.Platform" version="2.0.1.0" targetFramework="net461" />
+  <package id="Psibr.Platform" version="2.0.1.0" targetFramework="net45" />
 </packages>
