--- a/src/REstate.Web.Core/packages.config
+++ b/src/REstate.Web.Core/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<packages xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
+<packages>
   <package id="Autofac" version="3.5.2" targetFramework="net461" />
   <package id="JWT" version="1.3.4" targetFramework="net461" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
@@ -11,9 +11,9 @@
   <package id="Nancy.Bootstrappers.Autofac" version="1.4.1" targetFramework="net461" />
   <package id="Nancy.Owin" version="1.4.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
-  <package id="OwinJwtAndCookie" version="1.0.8.0" targetFramework="net461" />
-  <package id="Psibr.Platform" version="2.0.1.0" targetFramework="net461" />
-  <package id="Psibr.Platform.Nancy" version="2.0.2.0" targetFramework="net461" />
+  <package id="OwinJwtAndCookie" version="1.0.8.0" targetFramework="net45" />
+  <package id="Psibr.Platform" version="2.0.1.0" targetFramework="net45" />
+  <package id="Psibr.Platform.Nancy" version="2.0.2.0" targetFramework="net45" />
   <package id="Serilog" version="1.5.14" targetFramework="net461" />
   <package id="Topshelf" version="3.3.1" targetFramework="net461" />
 </packages>
