--- a/src/Susanoo.ConnectionPooling/packages.config
+++ b/src/Susanoo.ConnectionPooling/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<packages xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
+<packages>
   <package id="Susanoo.Core" version="1.2.4.2" targetFramework="net461" />
 </packages>
