Added configurability for logging files. Likely to evolve.

--- a/src/REstateConfig.json
+++ b/src/REstateConfig.json
@@ -42,6 +42,7 @@
   "tokenLifeSpan": 30,
   "connectorConfig": {
   },
+  "rollingFileLoggerPath":  "C:\\REstate\\logs",
   "connections": [
     {
       "connectionString": "server=devsql;database=REstate;Application Name=REstate;Integrated Security=sspi;MultipleActiveResultSets=true",
